Fix : Horizontal overflow cause removed

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header nav {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: 8vh;
     position: relative;
 }
@@ -109,17 +109,21 @@ header nav .nav-wrapper img {
     transition: 500ms ease-in-out;
 }
 
-/* main {
+main {
     background: url(img/bg.png) no-repeat center center fixed;
-    background-size: 100% 100%;
-    height: 100%;
-    overflow: hidden;
-    opacity: 100%;
-    padding-top: 16vh;
+    background-size: cover;
+    height: 80vh;
 }
 
 .count-box {
     display: flex;
     justify-content: center;
     align-items: center;
-} */
+}
+
+
+footer {
+    background-color: #222222;
+    /* width: 100%; */
+    height: 20vh;
+}
